--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.css" />
   </head>
   <body>
+    <div class="container-fluid">
     <h1>La vida es sueño.</h1>
     <br>
     <img src="https://webdeveloper2017.github.io/machupicchu.jpg" class="img img-responsive">
-    
+    <br>
+    </div>
   </body>
 </html>
     
