--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div class="container-fluid">
     <h1>La vida es sueño.</h1>
+      <h2>Y los sueños sueños son.</h2>
     <br>
     <img src="https://webdeveloper2017.github.io/machupicchu.jpg" class="img img-responsive">
     <br>
