--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@ document.oncontextmenu=new Function("return false")
   <body>
     <div class="container-fluid">
     <h1>Study materials.</h1>
-      <p><a href="https://webdeveloper2017.github.io/aplus.html" target="_blank">A+</a></p>
-      <p><a href="https://webdeveloper2017.github.io/aplus.html" target="_blank">Network+</a></p>
-      <p><a href="https://webdeveloper2017.github.io/aplus.html" target="_blank">Security+</a></p>
-    <br>
+      <h2>
+      <p><a href="https://webdeveloper2017.github.io/aplus.html" target="_blank">A+</a>&nbsp;&nbsp;&nbsp;
+      <a href="https://webdeveloper2017.github.io/aplus.html" target="_blank">Network+</a>&nbsp;&nbsp;&nbsp;
+      <a href="https://webdeveloper2017.github.io/aplus.html" target="_blank">Security+</a></p>
+      </h2>
+    
     <img src="https://webdeveloper2017.github.io/machupicchu.jpg" class="img img-responsive">
     <br>
     </div>
