--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	</a>
 	<br>
 	<br>
-	<a href="https://webdeveloper2017.github.io/networkplus.html" target="_blank"
+	<a href="https://webdeveloper2017.github.io/networkplusapril2021.html" target="_blank"
 		class="btn btn-lg btn-block btn-warning">
 		<h2>CompTIA Network Plus</h2>
 	</a>
