--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
   <div class="row">
 
     <div class="col-md-6">
-      <a href="" target="_blank">
+      <a href="https://drive.google.com/file/d/156YcnBAdrOfJj_VFY9VcFKgQkwfGWJJB/view?usp=sharing" target="_blank">
         <img src="linuxmagazineapril2021.png" class="img-fluid d-block mx-auto">
       </a>
     </div>
 
     <div class="col-md-6">
-      <a href="" target="_blank">
+      <a href="https://drive.google.com/file/d/1ZMJFj7d_r2IDgdIBCkQL4yNZk_oJfi4L/view?usp=sharing" target="_blank">
         <img src="linuxmagazinemay2021.png" class="img-fluid d-block mx-auto">    
       </a>
     </div>
