--- a/networkplus2021.html
+++ b/networkplus2021.html
@@ -55,20 +55,49 @@
     
 </head>
 <body oncontextmenu="alert('Make it happen!');return false;" onselectstart="return false" ondragstart="return false" 
-	style="background-color: rgb(255, 255, 255);background-image: linear-gradient(-90deg, yellow, lightblue, lightgreen);">
+	style="background-color: rgb(255, 255, 255);background-image: linear-gradient(-90deg, rgb(94, 255, 0), rgb(173, 191, 230), rgb(238, 178, 144));">
 <br>
 <div class="container-fluid text-center">
     <br>
 	   <h1>CompTIA Network Plus.</h1>
     <br>
-	<a href="https://webdeveloper2017.github.io/networkplusapril2021.html" target="_blank"
+    <hr>
+    <div class="row">
+
+      <div class="col-md-3">
+    <a href="https://drive.google.com/file/d/1bv9wpox8qRtETgGR2ZIFvkdXfzLqDjss/view?usp=sharing" target="_blank">
+            <img src="meyers.png" class="img-fluid">
+    </a>
+      </div>
+      <div class="col-md-3">
+    <a href="https://drive.google.com/file/d/1PW6hUlp1Sudo_0fN2VLENvSopYkoaVMr/view?usp=sharing" target="_blank">
+            <img src="messer.png" class="img-fluid">
+    </a>
+      </div>
+      <div class="col-md-3">
+    <a href="https://drive.google.com/file/d/13VAu2rGfi_uK_LDtkvHE4_M07Yjv_RLP/view?usp=sharing" target="_blank">
+            <img src="official.png" class="img-fluid">
+    </a>
+      </div>
+      <div class="col-md-3">
+    <a href="https://drive.google.com/file/d/13S5BZvkdJLRrBRG8MZfyaL2Cj9vEUR9Z/view?usp=sharing" target="_blank">
+            <img src="objectives.png" class="img-fluid">
+    </a>
+      </div>
+  
+  
+    </div>
+
+
+
+  
+		
+    <hr>
+    <br>
+    <a href="https://webdeveloper2017.github.io/networkplusapril2021.html" target="_blank"
 		class="btn btn-block btn-lg btn-warning">
 		<h2><strong>Exam Prep 1</strong></h2>
 	</a>
-
-	
-		
-    <hr>
 </div>
 
 <br>
