--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
 
 
   </div>
+  <br>
+  <hr>
+  <br>
+  <div class="row">
+
+    <a href="https://www.wired.com/tag/cybersecurity/" target="_blank" 
+      class="btn btn-lg btn-primary rounded-pill">Wired Magazine - Security</a>
+
+    <a href="https://www.cyberthreatalliance.org/" target="_blank"
+      class="btn btn-lg btn-warning rounded-pill">CyberThreat Alliance</a>
+
+    <a href="https://en.wikipedia.org/wiki/Tailored_Access_Operations" target="_blank" class="btn btn-lg btn-primary rounded-pill">
+      TAO - Tailored Access Operations
+    </a>
+
+    <a href="https://www.nsa.gov/News-Features/Feature-Stories/Article-View/Article/2567021/rob-joyce-begins-as-nsas-director-of-cybersecurity/" target="_blank" class="btn btn-lg btn-warning rounded-pill">
+      The NSA Director of Security
+    </a>
+
+    <!-- 
+    <a href="" target="_blank" class="btn btn-lg btn-primary rounded-pill">
+
+    </a>
+    -->
+
+
+  </div>
 </div>
 <hr>
 
