--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
 	</a>
 
   <br>
+	<br>
+	<a href="https://webdeveloper2017.github.io/securityplus2021.html" target="_blank"
+		class="btn btn-lg btn-block btn-warning">
+		<h2>CompTIA Security Plus</h2>
+	</a>
+
+  <br>
   <br>
   
 
