--- a/securityplus2021.html
+++ b/securityplus2021.html
@@ -60,6 +60,7 @@
 </a>
 <br>
 <br>
+	  <a href="https://webdeveloper2017.github.io/s1.pdf" target="_blank" class="btn btn-lg btn-block btn-info">Summary</a>
 <hr>
 
 
